# Text-to-SQL-AI

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: execute.py  generate.py  health.py  schemas.py
backend/app/core/: config.py
backend/app/db/: duckdb_client.py  schema_loader.py
backend/app/llm/: model_loader.py  prompt_builder.py  recovery.py  sql_generator.py
backend/app/models/: requests.py  responses.py
backend/app/sql/: safety.py  validator.py
backend/data/demo/: create_demo_db.py  ecommerce_schema.sql
backend/tests/: test_api.py  test_safety.py  test_validator.py
docs/: BACKEND_SCHEMA.md  IMPLEMENTATION_PLAN.md  PRD.md  TRD.md  UI_UX_BRIEF.md  demo_questions.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: HistoryPanel.tsx  MonacoSqlEditor.tsx  RecoveryTimeline.tsx  ResultsTable.tsx  SchemaBrowser.tsx
frontend/src/types/: index.ts
training/: README.md
training/configs/: qlora_sqlcoder_spider.yaml
training/notebooks/: finetune_sqlcoder_spider_qlora.ipynb
training/scripts/: convert_spider_to_sqlcoder.py  push_adapter.py  test_converter.py  train_qlora.py
